style.css
* {
    font-family: "Inter", 'Poppins';
    padding : 0;
    margin : 0;
    box-sizing: border-box;
}

a, a:visited, a:hover, a:active {
  text-decoration: none;
}

*figure {
  user-select: none;
}

*img {
  user-select: none;
}

:root {
    --soft-orange : hsl(35, 77%, 62%);
    --soft-red : hsl(5, 85%, 63%);

    --off-white : hsl(36, 100%, 99%);
    --grayish-blue : hsl(233, 8%, 79%);
    --dark-grayish-blue: hsl(236, 13%, 42%);
    --very-dark-blue: hsl(240, 100%, 5%);
}

.unselectable {
  user-select: none;
}

.attribution {
  font-size: 11px; text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

body {
  background-color: var(--off-white);

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;

  width: 100%;
  min-height: 100svh;
  padding: 5% 7.5%;
}

header {
  width: 100%;

  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 50px;
}

.header-logo-fig {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;

  height: 100%;
  user-select: none;
}

.header-logo-img {
  height: 100%;
  width: 100%;
}

.header-linkslist {
  display: flex;
  justify-content: space-between;
  align-items: center;

  gap: 50px;
}

.header-link {
  color: var(--dark-grayish-blue);
  font-size: 1.1rem;
}

main {
  width: 100%;
}

.topnews {
  display: flex;
  justify-content: space-between;
  align-items: center;

  width: 100%;
  height: 50svh;
}

.bignews {
  width: 70%;
  height: 100%;

  padding: 0 10px 0 0;
}

.bignews-fig {
  width: 100%;
  height: 50%;
  
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;

  user-select: none;
}

.bignews-img {
  min-height: 100%;
  width: 100%;
}

.bignews-details {
  height: 50%;
  width: 100%;

  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 20px 0;
}

.bignews-title {
  font-size: 4rem;
  font-weight: 800;
  width: 45%;
}

.bignews-description {
  height: 100%;
  width: 50%;

  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.bignews-description-text {
  color: var(--dark-grayish-blue);
  font-size: 1.15rem;
}

.bignews-description-button {
  background-color: var(--soft-red);

  width: 200px;
  height: 50px;

  display: flex;
  justify-content: center;
  align-items: center;

  user-select: none;
}

.bignews-description-button-text {
  color: white;
  font-size: 0.9;
  font-weight: 500;
  text-transform: uppercase;
  letter-spacing: 3px;
}

.newslist {
  height: 100%;
  width: 30%;

  padding: 15px;

  display: flex;
  flex-direction: column;
  justify-content: space-around;

  background-color: var(--very-dark-blue);
}

.newslist-title {
  color: var(--soft-orange);
  font-size: 2.5rem;
  font-weight: 600;
}

.newslist-card {
  height: 20%;
  width: 100%;
}

.newslist-card-title {
  color: var(--off-white);
  font-size: 1.3rem;
}

.newslist-card-description {
  color: var(--grayish-blue);
  font-size: 0.9rem;
  font-weight: 300;
}

.bottomnews {
  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 15svh;
}

.bottomnews-card {
  width: 30%;
  height: 100%;
  
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.bottomnews-card-fig {
  height: 100%;
  width: 25%;

  display: flex;
  justify-content: center;
  align-items: center;

  overflow: hidden;
  user-select: none;
}

.bottomnews-card-img {
  min-height: 100%;
  width: 100%;
}

.bottomnews-card-details {
  width: 65%;
  height: 100%;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.bottomnews-card-number {
  color: var(--grayish-blue);
  font-size: 2rem;
  font-weight: 700;
}

.bottomnews-card-title {
  color: var(--very-dark-blue);
  font-size: 1.3rem;
}

.bottomnews-card-description {
  color: var(--dark-grayish-blue);
  font-size: 0.95rem;
  line-height: 25px;
  letter-spacing: 1px;
}

